--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 permissions_path = '../node_modules/react-native-permissions/ios'
 
 target 'tfjsapp' do
@@ -37,12 +38,15 @@ target 'tfjsapp' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+
+
   target 'tfjsappTests' do
     inherit! :search_paths
     # Pods for testing
   end
 
   use_native_modules!
+  use_unimodules!
 end
 
 target 'tfjsapp-tvOS' do
