--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/push-notification-ios": "^1.1.0",
-    "@react-navigation/native": "^5.1.0",
-    "@react-navigation/stack": "^5.2.1",
+    "@react-navigation/native": "^5.1.7",
+    "@react-navigation/stack": "^5.2.14",
     "@rematch/core": "^1.4.0",
+    "@tensorflow/tfjs": "^1.7.4",
+    "@tensorflow/tfjs-react-native": "^0.2.3",
     "@types/base-64": "^0.1.3",
     "@types/lodash": "^4.14.149",
     "@types/react-native-push-notification": "^3.0.8",
@@ -25,12 +27,17 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "eslint-config-airbnb": "^18.1.0",
+    "expo-camera": "^8.2.0",
+    "expo-gl": "^8.1.0",
+    "expo-gl-cpp": "^8.1.0",
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "native-base": "^2.13.12",
     "prettier": "^2.0.4",
     "react": "16.9.0",
+    "react-devtools": "^3.6.3",
     "react-native": "0.61.5",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-keychain": "^5.0.1",
     "react-native-permissions": "^2.0.10",
@@ -44,8 +51,8 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/core": "^7.9.6",
+    "@babel/runtime": "^7.9.6",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.60.25",
