--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,6 @@
   "exclude": [
     "node_modules",
     "babel.config.js",
-    "metro.config.js", "jest.config.js"
+    "metro.config.js"
   ]
 }
