--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,9 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    packagingOptions {
+          pickFirst '**/libjsc.so'
+    }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -183,6 +186,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-safe-area-context')
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-keychain')
+    implementation project(':react-native-fs')
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-permissions')
+    implementation project(':react-native-push-notification')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
@@ -203,5 +213,3 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
-
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
