--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@rematch/core": "^1.4.0",
+    "@tensorflow-models/blazeface": "0.0.5",
+    "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "^1.7.4",
     "@tensorflow/tfjs-react-native": "^0.2.3",
     "@types/base-64": "^0.1.3",
@@ -27,17 +29,17 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "eslint-config-airbnb": "^18.1.0",
-    "expo-camera": "^8.2.0",
-    "expo-gl": "^8.1.0",
-    "expo-gl-cpp": "^8.1.0",
+    "expo-camera": "^7.0.0",
+    "expo-gl": "^7.0.0",
+    "expo-gl-cpp": "^7.0.0",
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "native-base": "^2.13.12",
     "prettier": "^2.0.4",
     "react": "16.9.0",
     "react-devtools": "^3.6.3",
-    "react-native": "0.61.5",
-    "react-native-fs": "^2.16.6",
+    "react-native": "0.59.10",
+    "react-native-fs": "2.14.1",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-keychain": "^5.0.1",
     "react-native-permissions": "^2.0.10",
@@ -45,8 +47,9 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-svg": "^12.1.0",
     "react-native-touch-id": "^4.4.1",
-    "react-native-unimodules": "^0.9.0",
+    "react-native-unimodules": "^0.5.4",
     "react-redux": "^7.2.0",
     "reselect": "^4.0.0"
   },
@@ -66,6 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "jest": "^24.9.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
     "typescript": "^3.7.3"
