--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@rematch/core": "^1.4.0",
+    "@tensorflow-models/blazeface": "0.0.5",
+    "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "^1.7.4",
     "@tensorflow/tfjs-react-native": "^0.2.3",
     "@types/base-64": "^0.1.3",
@@ -30,6 +32,7 @@
     "expo-camera": "^8.2.0",
     "expo-gl": "^8.1.0",
     "expo-gl-cpp": "^8.1.0",
+    "expo-permissions": "^8.1.0",
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "native-base": "^2.13.12",
@@ -45,6 +48,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-svg": "^12.1.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-unimodules": "^0.9.0",
     "react-redux": "^7.2.0",
