--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/push-notification-ios": "^1.1.0",
+    "@react-navigation/core": "^5.5.0",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@rematch/core": "^1.4.0",
